# titanic_fast_api

./: app.py  enumerate.py  exceptions.py  predictor.py  pyproject.toml  xgboost.pkl
test/: test_funtion.py
